[package]
name = "rust-task-turbin3"
version = "0.1.0"
edition = "2024"
[dependencies]
solana-sdk = "1.15.2"
solana-client = "1.15.2"
solana-program = "1.15.2"
bs58 = "0.4.0"
borsh = "0.10.3"
solana-idlgen = { git = "https://github.com/deanmlittle/solana-idlgen.git" }
anchor-lang = "0.29.0"
anchor-client = "0.29.0"